# docs/swagger.json
@@ -142,6 +142,38 @@
                 }
             }
         },
+        "/ec/es/exportES": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "es查询"
+                ],
+                "summary": "导出es",
+                "parameters": [
+                    {
+                        "description": "es查询",
+                        "name": "queryData",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.EsSearch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"msg\",\"data\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/ec/es/getIndices": {
             "get": {
                 "consumes": [
@@ -193,6 +225,38 @@
                     }
                 }
             }
+        },
+        "/ec/es/queryES": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "es查询"
+                ],
+                "summary": "查询es",
+                "parameters": [
+                    {
+                        "description": "es查询",
+                        "name": "queryData",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/models.EsSearch"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"msg\",\"data\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -216,6 +280,24 @@
                 },
                 "version": {
                     "type": "string"
+                }
+            }
+        },
+        "models.EsSearch": {
+            "type": "object",
+            "properties": {
+                "currentPage": {
+                    "type": "integer"
+                },
+                "index": {
+                    "type": "string"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "queryJson": {
+                    "type": "object",
+                    "additionalProperties": true
                 }
             }
         }
